# c99

./: CMakeLists.txt  README.md
array/: array.h  binary_search.c  lis.c  monotonic_stack.c
graph/: disjoint_set.c  graph.h
tree/: binary_heap.c  prefix_tree.c  tree.h
